--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ if (annyang) {
 
   annyang.addCommands(commands);
 
-  annyang.start();
+  annyang.start({ autoRestart: true, continuous: true });
 }
 
 </script>
